2.78b became slower on render and more vram consuming #50662

Closed
opened 2017-02-12 17:16:54 +01:00 by Yegor · 10 comments

System Information
Debian testing, Nvidia GTX 780

Blender Version
Broken: 2.78b
Worked: 2.78a

Short description of error
2.78b became slower on render and more vram consuming in comparison to 2.78a

Exact steps for others to reproduce the error
Take any scene with textures and representative render time (not too small). I've tested it without motion blur, but with hair and sss shader.
Some other guys confirm that as well https://www.blendernation.com/2017/02/10/blender-2-78b-brings-10x-cycles-speedups/
I'm not sure if I should report it here or you already know this.

**System Information** Debian testing, Nvidia GTX 780 **Blender Version** Broken: 2.78b Worked: 2.78a **Short description of error** 2.78b became slower on render and more vram consuming in comparison to 2.78a **Exact steps for others to reproduce the error** Take any scene with textures and representative render time (not too small). I've tested it without motion blur, but with hair and sss shader. Some other guys confirm that as well https://www.blendernation.com/2017/02/10/blender-2-78b-brings-10x-cycles-speedups/ I'm not sure if I should report it here or you already know this.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Sergey Sharybin was assigned by Aaron Carlisle 2017-02-13 00:03:46 +01:00

This is not a valid bug report: please follow bug report guidelines and include all information requested there. Especially be as detail as possible about your exact system configuration (exact CPU, memory, whether it's CPU or GPU render). Make sure you test on some known file (like official benchmark file).

We can't fix issues which we can't reproduce and as far as speed comparison goes on our machines here we do not experience any slowdown in scenes with representitive render times:

Blender278b.png

This is not a valid bug report: please follow bug report guidelines and include all information requested there. Especially be as detail as possible about your exact system configuration (exact CPU, memory, whether it's CPU or GPU render). Make sure you test on some known file (like official benchmark file). We can't fix issues which we can't reproduce and as far as speed comparison goes on our machines here we do not experience any slowdown in scenes with representitive render times: ![Blender278b.png](https://archive.blender.org/developer/F484577/Blender278b.png)
Author

Oh man, after digging a while, i've found it!

If object has a custom split normals data and auto smooth enabled, 2.78b gives a big gap in memory consumption and a small one in render time in comparison to unchecked "auto smooth" or cleared custom split normals data. 2.78a does not!

Tell me if it's a bug or not.

Oh man, after digging a while, i've found it! If object has a custom split normals data and auto smooth enabled, 2.78b gives a big gap in memory consumption and a small one in render time in comparison to unchecked "auto smooth" or cleared custom split normals data. 2.78a does not! Tell me if it's a bug or not.

The way how we handle auto-split in Cycles indeed changed now. There might be some issue there, but hard to tell without a file.

Once again, please attach file which demonstrates issue for you.

The way how we handle auto-split in Cycles indeed changed now. There might be some issue there, but hard to tell without a file. Once again, please attach file which demonstrates issue for you.
Author

Sorry about that. Here's the file{F485171}

Sorry about that. Here's the file{[F485171](https://archive.blender.org/developer/F485171/benchmark.blend)}

Did some tweaks in af1e48e and the memory usage should be lower now. It is still higher due to the fact that auto-split now happens on Blender side, but this is likely as low as we can have without rolling back to an old behavior when we were not sure about match between Cycles and Blender.

As for render time, synchronization time might take some more time, but there should not be affect on the actual render time. Please test timing with lots of samples using nightly build which will include that commit.

Did some tweaks in af1e48e and the memory usage should be lower now. It is still higher due to the fact that auto-split now happens on Blender side, but this is likely as low as we can have without rolling back to an old behavior when we were not sure about match between Cycles and Blender. As for render time, synchronization time might take some more time, but there should not be affect on the actual render time. Please test timing with lots of samples using nightly build which will include that commit.

Found a bug in the optimization commit. Gonna to re-iterate over the fix.

Found a bug in the optimization commit. Gonna to re-iterate over the fix.

This issue was referenced by efbe47f9cd

This issue was referenced by efbe47f9cdb60761ade99094af3cb8f997c3255d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50662
No description provided.